--- a/css_basics/styles.css
+++ b/css_basics/styles.css
@@ -1,19 +1,96 @@
-body, main {
+body,
+main {
     display: flex;
 }
+
 body {
     flex-direction: column;
 }
+
+header {
+    flex: 0 0 auto;
+    background-color: #333;
+    color: white;
+    padding: 10px;
+    text-align: center;
+    font-size: 1.5em;
+}
+
 main {
     flex-direction: row;
     flex: auto;
 }
+
 article {
     flex: 2;
 }
+
+article>h1 {
+    color: aquamarine;
+    font-size: 2em;
+    font-weight: bold;
+    text-align: center;
+    margin: 0;
+}
+
+article>p {
+    font-size: 1.2em;
+    line-height: 1.5;
+    margin: 10px;
+}
+
+article>a {
+    color: blue;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 1.2em;
+    display: block;
+    text-align: center;
+    margin: 10px;
+    padding: 10px;
+    border: 1px solid blue;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+    background-color: #f0f0f0;
+    cursor: pointer;
+}
+
+article>a:hover {
+    background-color: #ddd;
+}
+
+article>a:visited {
+    color: purple;
+}
+
+article>table {
+    border-collapse: collapse;
+    width: 100%;
+    margin-top: 20px;
+}
+
+article>table,
+th,
+td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+}
+
 aside {
     flex: 1;
+    background-color: #f4f4f4;
+    padding:
+        10px;
 }
-article, aside {
+
+aside>p {
+    font-size: 1.2em;
+    line-height: 1.5;
+    margin: 10px;
+}
+
+article,
+aside {
     overflow-y: auto;
 }
