--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -163,7 +163,19 @@ body {
     background-color: var(--color-primary);
     color: var(--color-white);
     display: flex;
+    justify-content: center;
     align-items: center;
-    gap: 20px;
-    padding: 20px;
+    gap: 30px;
+    padding: 60px 80px;
 }
+
+.quote h3 {
+    font-size: 1rem;
+    text-align: start;
+    margin-top: 15px;
+}
+
+.quote p {
+    font-size: 1rem;
+    margin-top: 7px;
+    font-style: italic;}
