--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -178,4 +178,36 @@ body {
 .quote p {
     font-size: 1rem;
     margin-top: 7px;
-    font-style: italic;}
+    font-style: italic;
+}
+
+.quote img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.tutorials {
+    background-color: var(--color-white);
+    padding: 60px 40px;
+}
+
+.tutorials h2 {
+    text-align: center;
+    font-size: 2rem;
+    margin: 40px 0;
+}
+.tutorials span {
+    color: var(--color-primary);
+}
+
+.tutorials .tutorials-list {
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    /* align-items: center; */
+    /* flex-wrap: wrap; */
+    /* gap: 20px; */
+    /* padding: 0 20px; */
+}
