--- a/headphones/0-styles.css
+++ b/headphones/0-styles.css
@@ -4,12 +4,16 @@
     box-sizing: border-box;
 }
 
+html, body {
+    height: 100%;
+    width: 100%;
+}
+
 .container {
     width: 100%;
     height: 100%;
-    margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
     background-color: #f0f0f0;
 }
 
